--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: go
 go: 
  - tip
 
+before_script:
+  - go install ./vendor/github.com/golangci/golangci-lint/cmd/golangci-lint
+
 script:
- - go test -v ./...
+  - golangci-lint run       # run a bunch of code checkers/linters in parallel
+  - go test -v ./...
